--- a/chart_deps/prometheus/prometheus-operated/templates/ingress-thanos.yaml
+++ b/chart_deps/prometheus/prometheus-operated/templates/ingress-thanos.yaml
@@ -32,14 +32,14 @@ spec:
     {{- range .Values.thanosIngress.tls }}
     - hosts:
         {{- range .hosts }}
-        - {{ . | quote }}
+        - {{ tpl . $ | quote }}
         {{- end }}
       secretName: {{ .secretName }}
     {{- end }}
   {{- end }}
   rules:
     {{- range .Values.thanosIngress.hosts }}
-    - host: {{ .host | quote }}
+    - host: {{ tpl .host $ | quote }}
       {{- $svcPort := or .servicePort $svcPort }}
       http:
         paths:
