--- a/prometheus/values.yaml
+++ b/prometheus/values.yaml
@@ -10,6 +10,10 @@ global:
     root: #example.com
     env: #prd.example.com int.exmple.com dev.example.com etc
 
+  envs:
+    int:
+      natgw:
+
 
 alertmanager-configs:
   enabled: false
