--- a/chart_deps/konghq/plugins/templates/kongplugin.yaml
+++ b/chart_deps/konghq/plugins/templates/kongplugin.yaml
@@ -22,7 +22,7 @@ disabled: {{ $plugin.disabled | default "false" }}
 plugin: {{ $plugin.plugin_name }}
 {{- with $plugin.config }}
 config:
-  {{- toYaml . | nindent 2 }}
+  {{- tpl (toYaml .) $ | nindent 2 }}
 {{- end }}
 {{- end }}
 {{ end -}}
