--- a/environment/templates/chart_apps.yaml
+++ b/environment/templates/chart_apps.yaml
@@ -54,11 +54,13 @@ spec:
       valueFiles:
         - {{ printf "%s/%s/%s/values.yaml" $.Values.repository.envs_from_charts $.Values.env.name $chart_app_name }}
     {{- end }}
-    {{- if $chart_app_obj.valuesObject }}
+    {{- with $chart_app_obj.parameters }}
+      parameters:
+    {{- tpl (toYaml .) $ | nindent 8 }}
+    {{- end }}
     {{- with $chart_app_obj.valuesObject }}
       valuesObject:
     {{- tpl (toYaml .) $ | nindent 8 }}
-    {{- end }}
     {{- end }}
     {{- if $chart_app_obj.values }}
       values: {{ tpl (toYaml $chart_app_obj.values) $ | nindent 8 }}
@@ -94,17 +96,13 @@ spec:
       valueFiles:
         - {{ printf "%s/%s/%s/values.yaml" $.Values.repository.envs_from_charts $.Values.env.name $chart_app_name }}
     {{- end }}
-    {{- if $chart_app_obj.parameters }}
     {{- with $chart_app_obj.parameters }}
       parameters:
     {{- tpl (toYaml .) $ | nindent 8 }}
     {{- end }}
-    {{- end }}
-    {{- if $chart_app_obj.valuesObject }}
     {{- with $chart_app_obj.valuesObject }}
       valuesObject:
     {{- tpl (toYaml .) $ | nindent 8 }}
-    {{- end }}
     {{- end }}
     {{- if $chart_app_obj.values }}
       values: {{ tpl (toYaml $chart_app_obj.values) $ | nindent 8 }}
