disable dublicate values

--- a/chart_deps/prometheus/prometheus-operated/values.yaml
+++ b/chart_deps/prometheus/prometheus-operated/values.yaml
@@ -41,18 +41,18 @@ servicemonitor:
   prometheusSelector: {}
   labels: {}
   targetLabels: []
-  endpoints:
-    - port: http
-      path: /metrics
+  #endpoints:
+  #  - port: http
+  #    path: /metrics
 
 thanosSericeMonitor:
   enabled: false
   prometheusSelector: {}
   labels: {}
   targetLabels: []
-  endpoints:
-    - port: http
-      path: /metrics
+  #endpoints:
+  #  - port: http
+  #    path: /metrics
 
 thanosIngress:
   enabled: false
