--- a/prometheus/values.yaml
+++ b/prometheus/values.yaml
@@ -13,6 +13,36 @@ alertmanager-configs:
       enabled: true
       selector:
         alertmanager: main
+      spec:
+        inhibitRules:
+          - sourceMatch:
+              - name: severity
+                value: "critical"
+            targetMatch:
+              - name: severity
+                value: "medium"
+            equal: ['alertname', 'persistentvolumeclaim']
+          - sourceMatch:
+              - name: alertname
+                value: "OOM killed pods"
+            targetMatch:
+              - name: alertname
+                value: "OOM killed pods (on node)"
+            equal: ['node']
+          - sourceMatch:
+              - name: alertname
+                value: "OOM killed pods"
+            targetMatch:
+              - name: alertname
+                value: "High memory usage"
+            equal: ['container', 'pod']
+          - sourceMatch:
+              - name: alertname
+                value: "Pod replicas not ready"
+            targetMatch:
+              - name: alertname
+                value: "Pods waiting state"
+            equal: ['container']
 
 prometheus-node-exporter:
   enabled: false
@@ -147,7 +177,6 @@ operator:
       enabled: true
       namespace: prometheus
 
-
 prometheus-blackbox-exporter:
   enabled: false
 
@@ -280,11 +309,72 @@ prometheus-rules:
       team: sre
       selector:
         prometheus: main
+      CriticalMetric:
+        interval: "31s"
+        rules:
+          # pvc
+          PVC_low_capacity:
+            for: "15m"
+            description: "Volume {{ $labels.persistentvolumeclaim }} located in namespace {{ $labels.namespace }} (on {{ $labels.node }}) has capacity < 5%"
+            expr: (kubelet_volume_stats_available_bytes / on(instance,namespace,node,persistentvolumeclaim,service) kubelet_volume_stats_capacity_bytes*100) < 5
+          # Postgres
+          Available_postgresql_connections_are_running_out:
+            for: "15m"
+            description: "There are {{ $value }} available postgres (pod {{ $labels.pod }}) connections left, located in namespace {{ $labels.namespace }}"
+            expr: (sum by (pod, namespace) (pg_stat_activity_count) / sum by (pod, namespace) (pg_settings_max_connections) > 0.90) or (sum by (pod, namespace) (pg_settings_max_connections) - sum by (pod, namespace) (pg_stat_activity_count) < 20)
+          # Resources
+          OOM_killed_pods:
+            for: "0m"
+            description: "Container {{ $labels.exported_container }} in pod {{ $labels.exported_pod }} located in namespace {{ $labels.exported_namespace }} (node {{ $labels.node }}) was killed by OOM killer"
+            expr: ((increase(kube_pod_container_status_restarts_total[10m]) > 0) and ignoring (reason) kube_pod_container_status_last_terminated_reason{reason="OOMKilled"}) * on (exported_pod) group_left (node) kube_pod_info > 0
+          # Deployment
+          Pods_waiting_state:
+            for: "20m"
+            description: "Container {{ $labels.container }} in {{ $labels.pod }} waiting with reason {{ $labels.reason }} for >20 minutes"
+            expr: sum by (pod, container, namespace, reason) (kube_pod_container_status_waiting_reason{exported_namespace!="kube-system", reason!="OOMKilled"})>0
+          Pods_waiting_state_kube-system:
+            for: "1h"
+            description: "Container {{ $labels.container }} in {{ $labels.pod }} waiting with reason {{ $labels.reason }} for >1h"
+            expr: sum by (pod, container, namespace, reason) (kube_pod_container_status_waiting_reason{exported_namespace="kube-system", reason!="OOMKilled"})>0
+          Pod_replicas_not_ready:
+            for: "15m"
+            description: "Pods replicas less than specified for '{{ $labels.deployment }}'"
+            expr: (kube_deployment_spec_replicas * on (deployment) group_left (container) kube_deployment_labels) != (kube_deployment_status_replicas_available * on (deployment) group_left (container) kube_deployment_labels)
+          Daemonset_not_ready:
+            for: "15m"
+            description: "daemonset '{{ $labels.daemonset }}' not scheduled in 10m"
+            expr: kube_daemonset_status_number_misscheduled > 1
       WarningMetric:
         interval: "31s"
         rules:
           # postgres
-          - name: "Postgres logical backup error"
+          Postgres_logical_backup_error:
             for: "2h"
             description: "Cronjob {{ $labels.cronjob }} failed"
             expr: ((kube_cronjob_next_schedule_time - on(cronjob, exported_namespace) kube_cronjob_status_last_successful_time)/3600) > 25
+          # PVC
+          PVC_low_capacity:
+            for: "1h"
+            description: "Volume {{ $labels.persistentvolumeclaim }} located in namespace {{ $labels.namespace }} (on {{ $labels.node }}) has capacity < 10%"
+            expr: (kubelet_volume_stats_available_bytes / on(instance,namespace,node,persistentvolumeclaim,service) kubelet_volume_stats_capacity_bytes*100) < 10
+          # Resources
+          High_postgres_container_cpu_throttling:
+            for: "1h"
+            description: "Container {{ $labels.container }} in pod {{ $labels.pod }} located in namespace {{ $labels.namespace }} throttled for >1h with throttle of {{ humanizeDuration $value }}"
+            expr: rate(container_cpu_cfs_throttled_seconds_total{container="postgres"}[5m]) > 0.3
+          High_cpu_throttling:
+            for: "1h"
+            description: "Container {{ $labels.container }} in pod {{ $labels.pod }} located in namespace {{ $labels.namespace }} throttled for >1h with throttle of {{ humanizeDuration $value }}"
+            expr: rate(container_cpu_cfs_throttled_seconds_total{container!~"postgres|"}[5m]) > 0.4
+          High_memory_usage:
+            for: "30m"
+            description: "Container {{ $labels.container }} in pod {{ $labels.pod }} located in namespace {{ $labels.namespace }} is using >90% of Memory limit"
+            expr: sum by (container, pod, namespace) (container_memory_working_set_bytes{namespace!="kube-system"}) / on (container, pod, namespace) kube_pod_container_resource_limits{unit="byte"} > 0.9
+          RabbitMQ_High_memory(watermark)_usage:
+            for: "30m"
+            description: "Container {{ $labels.container }} in pod {{ $labels.pod }} located in namespace {{ $labels.namespace }} is using >90% of 'Memory high watermark' limit"
+            expr: sum by (container,pod,namespace) (container_memory_working_set_bytes{container="rabbitmq"}) / on(container,pod,namespace) rabbitmq_detailed_resident_memory_limit_bytes > 0.9
+          OOM_killed_pod_(on_node):
+            for: "1m"
+            description: "Some container located on node {{ $labels.node }} was killed by OOM killer"
+            expr: increase(node_vmstat_oom_kill[10m]) > 0
