--- a/cert-manager/values.yaml
+++ b/cert-manager/values.yaml
@@ -1,3 +1,8 @@
+global:
+  domain:
+    root: #example.com
+    env: #prd.example.com int.exmple.com dev.example.com etc
+
 cluster_issuers: {}
 
 certificates:
