--- a/chart_deps/prometheus/prometheus-rules/templates/prometheus-alerts.yaml
+++ b/chart_deps/prometheus/prometheus-rules/templates/prometheus-alerts.yaml
@@ -42,11 +42,12 @@ spec:
       interval: {{ .CriticalMetric.interval }}
       {{- end }}
       rules:
-  {{- range .CriticalMetric.rules }}
-        - alert: {{.name}}
+        {{- range $critMetricRuleName, $critMetricRule := .CriticalMetric.rules }}
+        {{- if not $critMetricRule.disabled}}
+        - alert: {{ $critMetricRuleName }}
           expr: |
-            {{- .expr | nindent 12}}
-          for: {{ .for }}
+            {{- $critMetricRule.expr | nindent 12}}
+          for: {{ $critMetricRule.for }}
           labels:
             env: {{ $alert.env }}
             severity: critical
@@ -54,9 +55,10 @@ spec:
             namespace: {{ $namespace }}
           annotations:
             summary: |
-              {{- .summary | default .name | nindent 14  }}
+              {{- $critMetricRule.summary | default $critMetricRuleName | nindent 14  }}
             description: |
-              {{- .description | nindent 14 }}
+              {{- $critMetricRule.description | nindent 14 }}
+        {{- end }}
   {{- end }}
   {{- end }}
   {{- if .WarningMetric }}
@@ -65,11 +67,12 @@ spec:
       interval: {{ .WarningMetric.interval }}
       {{- end }}
       rules:
-  {{- range .WarningMetric.rules }}
-        - alert: {{.name}}
+        {{- range $warnMetricRuleName, $warnMetricRule := .WarningMetric.rules }}
+        {{- if not $warnMetricRule.disabled}}
+        - alert: {{ $warnMetricRuleName }}
           expr: |
-            {{- .expr | nindent 12}}
-          for: {{ .for }}
+            {{- $warnMetricRule.expr | nindent 12}}
+          for: {{ $warnMetricRule.for }}
           labels:
             env: {{ $alert.env }}
             severity: medium
@@ -77,9 +80,10 @@ spec:
             namespace: {{ $namespace }}
           annotations:
             summary: |
-              {{- .summary | default .name | nindent 14  }}
+              {{- $warnMetricRule.summary | default $warnMetricRuleName | nindent 14  }}
             description: |
-              {{- .description | nindent 14 }}
+              {{- $warnMetricRule.description | nindent 14 }}
+        {{- end }}
   {{- end }}
   {{- end }}
 {{- end }}
