--- a/grafana/values.yaml
+++ b/grafana/values.yaml
@@ -20,6 +20,8 @@ grafana-main:
     auth:
       disable_login_form: "true"
     auth.generic_oauth:
+      #Fixes issues with user exists for oauth login
+      #https://github.com/grafana/grafana/issues/70203#issuecomment-1603895013
       oauth_allow_insecure_email_lookup: "true"
     users:
       allow_sign_up: "false"
