--- a/grafana/values.yaml
+++ b/grafana/values.yaml
@@ -9,6 +9,10 @@ grafana-operator:
   env:
     - name: RELATED_IMAGE_GRAFANA
       value: "docker.io/grafana/grafana:9.5.19"
+    - name: WATCH_NAMESPACE
+      valueFrom:
+        fieldRef:
+          fieldPath: metadata.annotations['olm.targetNamespaces']
 
 grafana-main:
   enabled: false
